adjusted site logo and header alignment to correctly fit elements

--- a/public/css/page.css
+++ b/public/css/page.css
@@ -27,6 +27,7 @@ header {
   display: block;
   transform: rotate(45deg);
   margin-right: 0.65rem;
+  margin-top: 0.25rem;
 }
 
 div#page {
@@ -98,13 +99,14 @@ header#main-header {
   height: 4.25rem;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end;
   background-color: slateblue;
 }
 
 @media screen and (min-height: 800px) {
   header#main-header {
     height: 5rem;
+    align-items: center;
   }
 }
 
